--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ bevy_ui = ["bevy/bevy_ui", "bevy/bevy_text", "bevy/bevy_render"]
 
 [dependencies]
 interpolation = "0.2"
-bevy = { version = "0.8", default-features = false }
+bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
 
 [dev-dependencies]
 bevy-inspector-egui = "0.12"
